[package]
  name = "utils"
version = "0.0.15"
  authors = ["Philip Beadle <philip.beadle@holo.host>"]

[dependencies]
  serde = "=1.0.89"
  serde_json = { version = "=1.0.39", features = ["preserve_order"] }
  serde_derive = "=1.0.89"
  holochain_core_types = { git = "https://github.com/holochain/holochain-rust" , tag = "0.0.25-alpha1" }
  hdk = { git = "https://github.com/holochain/holochain-rust", tag = "0.0.25-alpha1" }
  holochain_json_derive = "=0.0.15"
