[package]
  name = "holochain_basic_chat"
  version = "0.0.4"
  authors = ["willem <willemolding@gmail.com>, Philip Beadle <philip.beadle@holo.host>"]
  edition = "2018"
[dependencies]
  serde = "=1.0.89"
  serde_json = { version = "=1.0.39", features = ["preserve_order"] }
  serde_derive = "=1.0.89"
  juniper = "0.11.1"
  derive_more = "0.9.0"
  utils = { path ="../../../utils" }

  hdk = { git = "https://github.com/holochain/holochain-rust" , tag = "v0.0.21-alpha1" }
  holochain_wasm_utils = { git = "https://github.com/holochain/holochain-rust" , tag = "v0.0.21-alpha1" }
  hdk-proc-macros = { git = "https://github.com/holochain/holochain-rust" , tag = "v0.0.21-alpha1" }
  holochain_json_derive = "=0.0.1-alpha2"

[lib]
  path = "src/lib.rs"
  crate-type = ["cdylib"]
